# briefly

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/briefly/: package-lock.json  tailwind.config.ts
frontend/briefly/src/app/: globals.css  layout.tsx  page.tsx
frontend/briefly/src/app/components/client/: dropzone.tsx  footer.tsx  header.tsx  logo.tsx
